[package]
name = "garage-door-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
futures = "0.3.30"
http-types = "2.12.0"
serenity = "0.12.2"
tide = "0.16.0"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
